# learnopengl-rust-2d-game

./: Cargo.toml  README.md
2d-game/: Cargo.toml
2d-game/locales/: en.toml  zh-CN.toml
2d-game/src/: game.rs  main.rs  post_processor.rs  shader.rs  text_renderer.rs
2d-game/src/text_renderer/: ascii.rs  mod.rs  utf8.rs
shared/: Cargo.toml
shared/src/: filesystem.rs  lib.rs
