[workspace]
members = ["2d-game", "shared"]
resolver = "1"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
authors = ["src_resources"]

[workspace.dependencies]
gl = "0.14.0"
glfw = "0.55.0"
image = "0.25.1"
nalgebra-glm = "0.18.0"
lazy_static = "1.4.0"
rand = "0.9.0-alpha.1"
rand_pcg = "0.9.0-alpha.1"
freetype = "0.7.2"
rodio = "0.18.1"
