[package]
name = "learnopengl-2d-game"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gl.workspace = true
glfw.workspace = true
nalgebra-glm.workspace = true
lazy_static.workspace = true
rand.workspace = true
freetype.workspace = true
rodio.workspace = true
log.workspace = true
env_logger.workspace = true
rust-i18n.workspace = true
learnopengl-shared = { path = "../shared" }
